新增鼓樂饗宴手機板

--- a/04-Drum.html
+++ b/04-Drum.html
@@ -7,9 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/TenDrum.css">
     <link rel="stylesheet" href="./CSS/D-Drum.css">
+    <link rel="stylesheet" href="./CSS/D-Drum-mobile.css">
     <link rel="stylesheet" href="./CSS/wickedcss.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- swiper -->
     <!-- Icon -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -97,7 +101,7 @@
         </nav>
     </header>
 
-    <!-- 內文 -->
+    <!-- 內文 網頁版-->
     <section id="Drum_page">
         <div class="Drum">
             <!-- 項目清單 -->
@@ -221,7 +225,7 @@
                                     <div class="text-time">2009&emsp;</div>
                                     <div class="text-con">「鼓之島」專輯入圍第52屆葛萊美獎《最佳世界傳統音樂專輯》</div>
                                 </h6>
-                                <img src="./img/十鼓樂團/3張合併_工作區域 1.png" class="page-img-01" alt="">
+                                <img src="./img/鼓樂饗宴/3張合併_工作區域 1.png" class="page-img-01" alt="">
                                 <span class="line02">&nbsp;</span>
                             </div>
 
@@ -233,16 +237,16 @@
                                 <span class="line03">&nbsp;</span>
                                 <h3>主要成員</h3>
                                 <div class="img-groups">
-                                    <div id="art" class="art">
+                                    <div class="art">
                                         <div class="art-img art-img01">
                                         </div>
                                         <div class="overlay-ToRight">
                                             <div class="art-name">
-                                                <div class="atr-text">王昱淇</div>
-                                                <div class="atr-text">鼓齡&nbsp;16年</div>
-                                                <div class="atr-text">主修&nbsp;中國打擊</div>
-                                                <div class="atr-text">進團時間&nbsp;2015年</div>
-                                                <div class="atr-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
+                                                <div class="art-text">王昱淇</div>
+                                                <div class="art-text">鼓齡&nbsp;16年</div>
+                                                <div class="art-text">主修&nbsp;中國打擊</div>
+                                                <div class="art-text">進團時間&nbsp;2015年</div>
+                                                <div class="art-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
                                             </div>
                                         </div>
                                     </div>
@@ -251,11 +255,11 @@
                                         </div>
                                         <div class="overlay-ToRight">
                                             <div class="art-name">
-                                                <div class="atr-text">林孟緯</div>
-                                                <div class="atr-text">鼓齡&nbsp;15年</div>
-                                                <div class="atr-text">主修&nbsp;鼓</div>
-                                                <div class="atr-text">進團時間&nbsp;2010年</div>
-                                                <div class="atr-text">學歷&nbsp;嘉南藥理科技大學&nbsp;文化事業發展系</div>
+                                                <div class="art-text">林孟緯</div>
+                                                <div class="art-text">鼓齡&nbsp;15年</div>
+                                                <div class="art-text">主修&nbsp;鼓</div>
+                                                <div class="art-text">進團時間&nbsp;2010年</div>
+                                                <div class="art-text">學歷&nbsp;嘉南藥理科技大學&nbsp;文化事業發展系</div>
                                             </div>
                                         </div>
                                     </div>
@@ -265,26 +269,13 @@
                                         <div class="overlay-ToRight">
                                             <div class="art-name">
                                                 <div class="art-text">李意瑩</div>
-                                                <div class="atr-text">鼓齡&nbsp;16年</div>
-                                                <div class="atr-text">主修&nbsp;中國打擊</div>
-                                                <div class="atr-text">進團時間&nbsp;2015年</div>
-                                                <div class="atr-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
+                                                <div class="art-text">鼓齡&nbsp;16年</div>
+                                                <div class="art-text">主修&nbsp;中國打擊</div>
+                                                <div class="art-text">進團時間&nbsp;2015年</div>
+                                                <div class="art-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- <div class="art">
-                                        <div class="art-img art-img04">
-                                        </div>
-                                        <div class="overlay-ToRight">
-                                            <div class="art-name">
-                                                <div class="art-text">許瑋庭</div>
-                                                <div class="art-text"></div>
-                                                <div class="art-text"></div>
-                                                <div class="art-text"></div>
-                                                <div class="art-text"></div>
-                                            </div>
-                                        </div>
-                                    </div> -->
                                     <div class="art">
                                         <div class="art-img art-img05">
                                         </div>
@@ -298,7 +289,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -339,10 +329,10 @@
                                         <div class="overlay-ToRight">
                                             <div class="art-name">
                                                 <div class="art-text">徐霈純</div>
-                                                <div class="atr-text">鼓齡&nbsp;16年</div>
-                                                <div class="atr-text">主修&nbsp;中國打擊</div>
-                                                <div class="atr-text">進團時間&nbsp;2015年</div>
-                                                <div class="atr-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
+                                                <div class="art-text">鼓齡&nbsp;16年</div>
+                                                <div class="art-text">主修&nbsp;中國打擊</div>
+                                                <div class="art-text">進團時間&nbsp;2015年</div>
+                                                <div class="art-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
                                             </div>
                                         </div>
                                     </div>
@@ -415,7 +405,189 @@
 
         </div>
     </section>
-    <!-- 內文 -->
+    <!-- 內文 網頁版-->
+
+    <!-- 內文 手機板 -->
+    <section id="Drum-mobile">
+        <div class="Drum-mobile-title">鼓樂饗宴</div>
+        <div class="dropdown">
+            <button class="dropbtn">關於十鼓樂團<i class="fal fa-angle-down"></i></button>
+            <div class="dropdown-content">
+                <div class="drum-title01">關於十鼓樂團</div>
+                <div class="drum-title01 act">演出紀錄&事記</div>
+                <div class="drum-title01 act">主要成員</div>
+                <div class="drum-title01 act">固定演出時間</div>
+            </div>
+        </div>
+        <div class="drum-contexts">
+            <!-- 關於 -->
+            <div class="drum-context actt">
+                <div class="mobile-con">
+                    <div class="mobile-context">
+                        <div class="mobile-texts">
+                            <h6>成立於2000年春天，『傳創台灣土本文化，發揚鼓樂藝術薪傳』是樂團最大發展目標。而「十」字代表著鼓棒交疊，匯集十方的能量，共同凝聚團結的力量「十鼓」以文化的力量串連起城市運轉的特色及風格，企圖為台灣開創出一個熱鬧、多元兼具本土，且具有前瞻性的鼓術文化風格，更期望能使台灣在世界上成為著名的【鼓樂之島】。
+                            </h6>
+                            <h6>多年來，樂團傳創的音樂作品深受觀眾的喜愛，以在地的題材、風景、多樣化民族擊樂的元素，豐富了傳統擊樂原有面貌，更令社會大眾驚豔原來『鼓』是如此的多元及精彩！
+                            </h6>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="book-img book-img01">&nbsp;</div>
+            </div>
+            <!-- 演出 -->
+            <div class="drum-context">
+                <div class="mobile-con">
+                    <div class="mobile-con-title">演出紀錄&事記</div>
+                    <div class="mobile-texts">
+                        <h6>
+                            <div class="text-time">2017&emsp;</div>
+                            <div class="text-con">嘉義文創園區-十鼓囪擊劇場成立</div>
+                        </h6>
+                        <h6>
+                            <div class="text-time">2016&emsp;</div>
+                            <div class="text-con">受國家兩廳院邀請與歐陸巨擘導演狄奧多羅斯‧特爾左布勒斯跨國合作「酒神的女信徒」，鼓樂創作暨演出/國家兩廳院藝文廣場（戶外）
+                            </div>
+                        </h6>
+                        <h6>
+                            <div class="text-time">2014&emsp;</div>
+                            <div class="text-con">與法國舞團Karine Saporta合作《TAM-Tai》於巴黎音樂廳演出</div>
+                        </h6>
+                        <h6>
+                            <div class="text-time">2013&emsp;</div>
+                            <div class="text-con">榮獲亞洲文化推展聯盟入選2013年「亞洲藝術瑰寶」台灣代表團隊之一，於泰國清邁參演國際性亞洲文化年會之頒獎典禮</div>
+                        </h6>
+                        <h6>
+                            <div class="text-time">2010&emsp;</div>
+                            <div class="text-con">受美國PAS打擊樂藝術協會邀請，至印第安納州參與「美國PAS世界打擊樂藝術年會」演出</div>
+                        </h6>
+                        <h6>
+                            <div class="text-time">2009&emsp;</div>
+                            <div class="text-con">【鼓之島】專輯入圍第9屆美國獨立音樂獎《最佳世界傳統音樂專輯》</div>
+                        </h6>
+                    </div>
+                </div>
+                <div class="book-img book-img02"></div>
+
+
+            </div>
+            <!-- 成員 -->
+            <div class="drum-context">
+                <div class="mobile-con">
+                    <div class="mobile-con-title">主要成員</div>
+                    <div class="mobile-texts">
+                        <div class="swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="mobile-art">
+                                        <img src="./img/樂團成員/成員去背/王昱淇-截圖.png" class="mobile-art-img" alt="">
+                                        <div class="mobile-art-name">
+                                            <div class="mobile-art-text">王昱淇</div>
+                                            <div class="mobile-art-text">鼓齡&nbsp;16年</div>
+                                            <div class="mobile-art-text">主修&nbsp;中國打擊</div>
+                                            <div class="mobile-art-text">進團時間&nbsp;2015年</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="mobile-art">
+                                        <img src="./img/樂團成員/成員去背/林孟緯拷貝.png" class="mobile-art-img" alt="">
+                                        <div class="mobile-art-name">
+                                            <div class="mobile-art-text">林孟緯</div>
+                                            <div class="mobile-art-text">鼓齡&nbsp;15年</div>
+                                            <div class="mobile-art-text">主修&nbsp;鼓</div>
+                                            <div class="mobile-art-text">進團時間&nbsp;2010年</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="mobile-art">
+                                        <img src="./img/樂團成員/成員去背/李意瑩.png" class="mobile-art-img" alt="">
+                                        <div class="mobile-art-name">
+                                            <div class="mobile-art-text">李意瑩</div>
+                                            <div class="mobile-art-text">鼓齡&nbsp;16年</div>
+                                            <div class="mobile-art-text">主修&nbsp;中國打擊</div>
+                                            <div class="mobile-art-text">進團時間&nbsp;2015年</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="mobile-art">
+                                        <img src="./img/樂團成員/成員去背/吳鴻村.png" class="mobile-art-img" alt="">
+                                        <div class="mobile-art-name">
+                                            <div class="mobile-art-text">吳鴻村</div>
+                                            <div class="mobile-art-text">鼓齡&nbsp;&nbsp;13年</div>
+                                            <div class="mobile-art-text">主修&nbsp;&nbsp;鼓</div>
+                                            <div class="mobile-art-text">進團時間&nbsp;&nbsp;2017年</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="mobile-art">
+                                        <img src="./img/樂團成員/成員去背/林薏軒.png" class="mobile-art-img" alt="">
+                                        <div class="mobile-art-name">
+                                            <div class="mobile-art-text">林薏軒</div>
+                                            <div class="mobile-art-text">鼓齡&nbsp;&nbsp;13年</div>
+                                            <div class="mobile-art-text">主修&nbsp;&nbsp;鼓</div>
+                                            <div class="mobile-art-text">進團時間&nbsp;&nbsp;2017年</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="mobile-art">
+                                        <img src="./img/樂團成員/成員去背/張嘉方.png" class="mobile-art-img" alt="">
+                                        <div class="mobile-art-name">
+                                            <div class="mobile-art-text">張嘉方</div>
+                                            <div class="mobile-art-text">鼓齡&nbsp;8年</div>
+                                            <div class="mobile-art-text">主修&nbsp;中國打擊樂</div>
+                                            <div class="mobile-art-text">進團時間&nbsp;2017年</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="mobile-art">
+                                        <img src="./img/樂團成員/成員去背/徐霈純.png" class="mobile-art-img" alt="">
+                                        <div class="mobile-art-name">
+                                            <div class="mobile-art-text">徐霈純</div>
+                                            <div class="mobile-art-text">鼓齡&nbsp;16年</div>
+                                            <div class="mobile-art-text">主修&nbsp;中國打擊</div>
+                                            <div class="mobile-art-text">進團時間&nbsp;2015年</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="mobile-art">
+                                        <img src="./img/樂團成員/成員去背/黃士芬.png" class="mobile-art-img" alt="">
+                                        <div class="mobile-art-name">
+                                            <div class="mobile-art-text">黃士芬</div>
+                                            <div class="mobile-art-text">鼓齡&nbsp;&nbsp;13年</div>
+                                            <div class="mobile-art-text">主修&nbsp;&nbsp;鼓</div>
+                                            <div class="mobile-art-text">進團時間&nbsp;&nbsp;2017年</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="book-img book-img03"></div>
+
+            </div>
+            <!-- 定目劇 -->
+            <div class="drum-context">
+                <div class="mobile-con">
+                    <div class="mobile-con-title">固定演出時間</div>
+                    <div class="mobile-texts"></div>
+                </div>
+                <div class="book-img book-img04"></div>
+
+            </div>
+        </div>
+    </section>
+    <!-- 內文 手機板 -->
+
     <footer>版權聲明</footer>
     <!-- JS -->
 
@@ -516,8 +688,25 @@
                 }
             }
         }
-///翻書效果///
+        ///翻書效果///
+        ///假分頁///
+        var drum_title01 = document.querySelectorAll('.drum-title01')
+        var drum_context = document.querySelectorAll('.drum-context')
+        for (var i = 0; i < drum_title01.length; i++) {
+            const index = i
+            drum_title01[i].onclick = function () {
+                for (var i = 0; i < drum_title01.length; i++) {
+                    drum_title01[i].classList.add('act')
+                    drum_context[i].classList.remove('actt')
+                }
+                console.log(index)
+                drum_title01[index].classList.remove('act')
+                drum_context[index].classList.add('actt')
+            }
+        }
+        ///假分頁///
 
+        var swiper = new Swiper('.swiper-container');
     </script>
 </body>
 
