手機板 成員增加輪播

--- a/04-Drum.html
+++ b/04-Drum.html
@@ -567,8 +567,11 @@
                                     </div>
                                 </div>
                             </div>
-
-                            
+                            <!-- Add Pagination -->
+                            <div class="swiper-pagination"></div>
+                            <!-- Add Arrows -->
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
                         </div>
                     </div>
                 </div>
@@ -706,7 +709,25 @@
         }
         ///假分頁///
 
-        var swiper = new Swiper('.swiper-container');
+        var swiper = new Swiper('.swiper-container', {
+            spaceBetween: 30,
+            centeredSlides: true,
+            autoplay: {
+                delay: 2500,
+                disableOnInteraction: false,
+            },
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+
+
+
     </script>
 </body>
 
