鼓樂 手機板增加定目劇

--- a/04-Drum.html
+++ b/04-Drum.html
@@ -581,8 +581,33 @@
             <!-- 定目劇 -->
             <div class="drum-context">
                 <div class="mobile-con">
-                    <div class="mobile-con-title">固定演出時間</div>
-                    <div class="mobile-texts"></div>
+                    <div class="mobile-con-title">夢糖劇場十鼓擊樂團鼓樂定目劇演出</div>
+                    <div class="mobile-drama-t">
+                        <div class="drama-g">
+                            <img src="./img/鼓樂饗宴/天空斬照片.jpeg" class="drama-i" alt="">
+                            <div class="drama-i"></div>
+                            <div class="drama-t">
+                                <h5>天空斬</h5>
+                                <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及困境。鼓樂合奏詮釋忠.義.勇.武呈現出穿梭時空的對話。</h6>
+                            </div>
+                        </div>
+                        <div class="drama-g">
+                            <img src="./img/鼓樂饗宴/風馳雷擊照片.jpg" class="drama-i" alt="">
+                            <div class="drama-t">
+                                <h5>風馳雷擎</h5>
+                                <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及
+                                    困境。鼓樂合奏詮釋忠.義.勇.武呈現出穿梭時空的對話。</h6>
+                            </div>
+                        </div>
+                        <div class="drama-g">
+                            <img src="./img/鼓樂饗宴/祈天獻日照片.jpg" class="drama-i" alt="">
+                            <div class="drama-t">
+                                <h5>祈天現日</h5>
+                                <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及
+                                    困境。鼓樂合奏詮釋忠、義、勇、武呈現出穿梭時空的對話。</h6>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="book-img book-img04"></div>
 
