最新資訊超連結more

--- a/02-News.html
+++ b/02-News.html
@@ -127,7 +127,7 @@
                                         <div class="new-time">2020-09-26</div>
                                         <div class="new-name">2020-09-26(六)演出節目異動歡迎大家選擇喜歡的場次觀賞謝謝！！</div>
                                     </div>
-                                    <div class="new-more">more</div>
+                                    <a class="new-more" href="https://tendrum.com.tw/TpNews/zt">more</a>
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-4">
@@ -137,7 +137,7 @@
                                         <div class="new-time">2020-09-20</div>
                                         <div class="new-name">2020-09-20(日)臺南十鼓仁糖文創園區 演出異動公告～～十鼓仁糖文創園區-演出節目異動..</div>
                                     </div>
-                                    <div class="new-more">more</div>
+                                    <a class="new-more" href="https://tendrum.com.tw/TpNews/zt">more</a>
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-4">
@@ -147,7 +147,7 @@
                                         <div class="new-time">2020-09-08</div>
                                         <div class="new-name">2020-09-08(二)～09-09(三)十鼓文創設施設備開放調整公告</div>
                                     </div>
-                                    <div class="new-more">more</div>
+                                    <a class="new-more" href="https://tendrum.com.tw/TpNews/zt">more</a>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                                         <div class="new-time">2020-10-02</div>
                                         <div class="new-name">2020-10-02(五)、10-03(六)十鼓仁糖文創園區 夜間定目劇演出...</div>
                                     </div>
-                                    <div class="new-more">more</div>
+                                    <a class="new-more" href="https://tendrum.com.tw/TpNews/zt">more</a>
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-4">
@@ -179,7 +179,7 @@
                                         <div class="new-name">夢糖劇場十鼓擊樂團鼓樂定目劇演出異動公告
                                         </div>
                                     </div>
-                                    <div class="new-more">more</div>
+                                    <a class="new-more" href="https://tendrum.com.tw/TpNews/zt">more</a>
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-4">
@@ -191,7 +191,7 @@
                                         <div class="new-name">2020-09-05(六)二手市集開幕時間:早上9:00～下午6:00。歡迎各位...
                                         </div>
                                     </div>
-                                    <div class="new-more">more</div>
+                                    <a class="new-more" href="https://tendrum.com.tw/TpNews/zt">more</a>
                                 </div>
                             </div>
                         </div>
