入園資訊增加雲霧、設施背景更改

--- a/03-Facility.html
+++ b/03-Facility.html
@@ -159,9 +159,9 @@
     </header>
 
     <div class="Facility">
-        <div class="bag-img"></div>
+        <div class="bag-img">&nbsp;</div>
 
-        <h1 class="facility-title"> 極限體驗</h1>
+        <h1 class="facility-title">&nbsp;</h1>
         <div class="img-groups">
             <!-- 第一組 -->
             <div class="cell">
