--- a/05-Information.html
+++ b/05-Information.html
@@ -96,6 +96,8 @@
             <!-- 漢堡條 -->
         </nav>
     </header>
+    <div class="bg smoke-bg"></div>
+    <div class="bg smoke"></div>
 
     <div class="park_pag">
         <div class="park_button_bar">
